@@ -13,7 +13,7 @@ export(exampleExpressionSet)
 export(exampleGeneSetDb)
 export(exampleGeneSets)
 export(geneSetDb)
-export(geneSetStats)
+export(geneSetFeatureStats)
 export(geneSets)
 export(getMSigDBset)
 export(hasGeneSet)
