@@ -1,10 +1,10 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/multiGSEA.R
-\name{geneSetStats}
-\alias{geneSetStats}
+\name{geneSetFeatureStats}
+\alias{geneSetFeatureStats}
 \title{Fetch the logFC statistics for a geneset}
 \usage{
-geneSetStats(x, i, j)
+geneSetFeatureStats(x, i, j)
 }
 \arguments{
 \item{x}{\code{MultiGSEAResult}}
