@@ -1,10 +1,10 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/multiGSEA.R
-\name{geneSetFeatureStatistics}
-\alias{geneSetFeatureStatistics}
-\title{Summarize the statistics for each feature at the geneset level.}
+\name{geneSetsStats}
+\alias{geneSetsStats}
+\title{Summarize useful feature-level statistics across gene sets.}
 \usage{
-geneSetFeatureStatistics(x, feature.min.logFC = 1, feature.max.padj = 0.1,
+geneSetsStats(x, feature.min.logFC = 1, feature.max.padj = 0.1,
   trim = 0.1)
 }
 \arguments{
